[package]
name = "msws"
version = "0.2.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"
description = "Middle Square Weyl Sequence pseudorandom number generator."
repository = "https://github.com/twe4ked/msws"
license = "MIT"
keywords = ["random", "rand", "rng", "no_std"]
categories = ["algorithms", "no-std"]
readme = "README.md"
